--- a/simple-crud-menu/src/Components/MenuItemForm/MenuItemForm.css
+++ b/simple-crud-menu/src/Components/MenuItemForm/MenuItemForm.css
@@ -1,6 +1,111 @@
+.menu-itemForm-container {
+    display: flex;
+    padding: 0 50px;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    transition: height 0.3s ease;
+}
+.menu-title {
+    display: flex;
+    flex: 0.5;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+}
+
+.menu-title .menuTitle-top {
+    display: block;
+    font-size: 120px;
+    margin-left: 0;
+    font-weight: 700;
+    color: #3f3f3f;
+}
+.menu-title .menuTitle-btm {
+    display: flex;
+    justify-content: end;
+    font-size: 100px;
+    margin-top: -50px;
+    font-weight: 700;
+    color: #f3f3f3;
+}
 .menu-item-form {
-    /* Add your styles here */
-    /* For example: */
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 50px;
+    max-width: 900px;
     margin: 0 auto;
+    flex: 1;
   }
+  
+  .menu-item-form .menu-textfield-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    min-width: 450px;
+  }
+  
+  .menu-item-form .menu-textfield-container .menu-item-input {
+    width: 300px;
+    max-width: 200px;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+}
+.menu-item-form Button {
+    width: 20%;
+    background-color: #3f3f3f;
+    margin-top: 10px;
+    color: #f3f3f3;
+    height: 53px;
+  }
+  
+  .menu-item-form Button:hover {
+    background-color: #f3f3f3;
+    color: #3f3f3f;
+  }
+  
+  @media screen and (max-width: 1080px){
+    .menu-itemForm-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .menu-item-form{
+        align-items: center;
+        align-content: center;
+    }
+    .menu-textfield-container{
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+  }
+
+  @media screen and (max-width: 600px){
+    .menu-item-form .menu-textfield-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap:nowrap;
+    }
+    .menu-item-form{
+    flex:3.5;
+    margin: 0px;
+    padding:0px;
+    }
+    .menu-item-form .menu-textfield-container .menu-item-input {
+    width: 80%;
+    max-width: 350px;
+    }
+    .menu-title .menuTitle-top , .menu-title .menuTitle-btm{
+    font-size: 70px;
+    }
+    .menu-item-form .menu-textfield-container{
+    min-width: 300px;
+    }
+    .menu-textfield-container Button{
+        width: 400px;
+    }
+    .menu-itemForm-container{
+        padding:0px;
+    }
+}
