--- a/simple-crud-menu/src/Components/MenuList/MenuList.css
+++ b/simple-crud-menu/src/Components/MenuList/MenuList.css
@@ -8,6 +8,10 @@
     display: flex;
 }
 
+.menu-icon-button {
+    display: none;
+}
+
 .buttons-container Button {
     color: #f3f3f3;
     margin-right: 10px;
@@ -53,8 +57,6 @@
     background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
     position: relative;
 }
-
-.menu-list {}
 
 .menu-item h3 {
     margin-bottom: 5px;
@@ -110,19 +112,52 @@
     right: 5px;
     color: white;
     background: #ff4141;
-    padding:20px;
 }
 
 .item-buttons IconButton:hover {
     background: #e33e3e;
 }
-.item-buttons Button{
+
+.item-buttons Button {
     background-color: #198754;
-    color:White;
-    margin-left:auto !important;
-    
+    color: white;
+    margin-left: auto !important;
 }
-.item-buttons Button:hover{
+
+.item-buttons Button:hover {
     background-color: white;
     color: #198754;
 }
+.custom-drawer {
+    width: 240px; /* Adjust width as needed */
+  }
+  
+.buttons-container Button:active {
+background: #f3f3f3;
+color: #3f3f3f;
+outline: 1px solid #3f3f3f;
+outline-offset: -1px;
+}
+  
+
+@media screen and (max-width: 775px) {
+    .menu-item-container{
+        justify-content: center;
+    }
+    .menu-item{
+        width: 100%;
+    }
+    .menu-list-container{
+        padding:0px 15px;
+    }
+    .buttons-container {
+        display: none;
+    }
+
+    .menu-icon-button {
+        display: block;
+    }
+    
+}
+
+
